<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ChatActivity">

        <Button
            android:id="@+id/buttonNoConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonNoConfig"
            android:text="@string/button_no_config"/>

        <Button
            android:id="@+id/buttonOptionalPreChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonOptionalPreChat"
            android:text="@string/button_optional_pre_chat_activity"/>

        <Button
            android:id="@+id/buttonMandatoryPreChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonMandatoryPreChat"
            android:text="@string/button_requred_pre_chat_activity"/>

        <Button
            android:id="@+id/buttonNoPreChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonNoPreChat"
            android:text="@string/button_no_pre_chat_form_activity"/>

        <Button
            android:id="@+id/buttonPreSetData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonPreSetData"
            android:text="@string/button_pre_set_data_activity"/>

        <Button
            android:id="@+id/buttonChatFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonChatFragment"
            android:text="@string/button_chat_fragment"/>

        <EditText
            android:id="@+id/account_key_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_key"/>

        <Button
            android:id="@+id/buttonAccountKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonAccountKey"
            android:text="@string/button_account_key"/>

    </LinearLayout>
    
</ScrollView>


